tests/ui/g-load-begin-wrong-control-kind.stderr
error[E0080]: evaluation panicked: wire control messages require cross-role send
 --> $RUST/core/src/panic.rs
  |
  | ...   $crate::panicking::panic_fmt($crate::const_format_args!($($t)+));
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `hibana::g::send::<hibana::g::Role<0>, hibana::g::Role<0>, hibana::global::Message<hibana::global::LabelMarker<110>, hibana::substrate::cap::GenericCapToken<LoadBeginKind>, LoadBeginKind>, 0>::{constant#0}` failed here
  |
 ::: src/global.rs
  |
  | ...   panic!("wire control messages require cross-role send")
  |       ------------------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/global.rs
  |
  | /     const {
  | |         let from = <From as KnownRole...
  | |         let to = <To as KnownRole>::I...
  | |         crate::global::validate_role_...
... |
  | |     }
  | |_____^

note: the above error was encountered while instantiating `fn send::<Role<0>, Role<0>, hibana::global::Message<hibana::global::LabelMarker<110>, GenericCapToken<LoadBeginKind>, LoadBeginKind>, 0>`
  --> tests/ui/g-load-begin-wrong-control-kind.rs:47:13
   |
47 |       let _ = g::send::<
   |  _____________^
48 | |         g::Role<0>,
49 | |         g::Role<0>,
50 | |         g::Msg<
...  |
55 | |         0,
56 | |     >();
   | |_______^
